added the code for the main file